// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackgroundFields > with a gradient background > matches the snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="undefined-form-item"
    >
      Gradient
    </label>
    <div
      aria-controls="radix-:id1:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="relative w-full"
      data-slot="popover-trigger"
      data-state="closed"
      type="button"
    >
      <div
        class="h-26 w-full rounded-md border cursor-pointer"
        style="background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(0, 0, 255) 50%);"
      />
      <div
        class="absolute border inset-0 bg-white/60 backdrop-blur-[1px] opacity-100 lg:opacity-0 hover:opacity-100 transition-opacity rounded-md flex items-center justify-center cursor-pointer"
      >
        <button
          class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-slot="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-settings2 lucide-settings-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 17H5"
            />
            <path
              d="M19 7h-9"
            />
            <circle
              cx="17"
              cy="17"
              r="3"
            />
            <circle
              cx="7"
              cy="7"
              r="3"
            />
          </svg>
          Modify
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`BackgroundFields > with a gradient background > matches the snapshot of the gradient editor 1`] = `
<div
  class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border p-4 shadow-md outline-hidden w-80 max-h-[600px] overflow-y-auto"
  data-align="start"
  data-side="bottom"
  data-slot="popover-content"
  data-state="open"
  id="radix-:id1:"
  role="dialog"
  style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
  tabindex="-1"
>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="space-y-1"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for=":id2:-form-item"
      >
        Type
      </label>
      <div
        aria-describedby=":id2:-form-item-description"
        aria-invalid="false"
        class="flex items-center border rounded-md overflow-hidden h-10 bg-background"
        id=":id2:-form-item"
      >
        <button
          class="flex-1 px-4 py-2 text-sm font-medium transition-colors bg-primary text-primary-foreground"
          type="button"
        >
          Linear
        </button>
        <div
          class="h-6 w-px bg-border"
        />
        <button
          class="flex-1 px-4 py-2 text-sm font-medium transition-colors bg-background hover:bg-muted"
          type="button"
        >
          Radial
        </button>
      </div>
    </div>
    <div
      class="space-y-1"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for=":id3:-form-item"
      >
        Angle
      </label>
      <div
        aria-describedby=":id3:-form-item-description"
        aria-invalid="false"
        class="flex items-center gap-4"
        id=":id3:-form-item"
      >
        <div
          class="relative w-10 h-10 rounded-full border-2 border-border bg-background cursor-pointer"
        >
          <div
            class="absolute w-2.5 h-2.5 rounded-full bg-primary"
            style="left: 85%; top: 50%; transform: translate(-50%, -50%);"
          />
        </div>
        <input
          class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-20"
          data-slot="input"
          max="360"
          min="0"
          type="number"
          value="90"
        />
      </div>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="undefined-form-item"
        >
          Color Stops
        </label>
        <button
          class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-4 w-4 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add Stop
        </button>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex min-w-0 text-base transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive appearance-none border-1 shadow-sm p-0 bg-transparent cursor-pointer h-10 w-10 rounded-md [&::-webkit-color-swatch-wrapper]:p-0 [&::-webkit-color-swatch]:border-0 [::-moz-color-swatch]:border-0"
            data-slot="input"
            type="color"
            value="#ff0000"
          />
          <input
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1"
            data-slot="input"
            placeholder="#000000"
            type="text"
            value="#ff0000"
          />
          <div
            class="flex items-center gap-1"
          >
            <input
              class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-16"
              data-slot="input"
              max="100"
              min="0"
              type="number"
              value="0"
            />
            <span
              class="text-sm text-muted-foreground"
            >
              %
            </span>
          </div>
          <button
            class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
            data-slot="button"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex min-w-0 text-base transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive appearance-none border-1 shadow-sm p-0 bg-transparent cursor-pointer h-10 w-10 rounded-md [&::-webkit-color-swatch-wrapper]:p-0 [&::-webkit-color-swatch]:border-0 [::-moz-color-swatch]:border-0"
            data-slot="input"
            type="color"
            value="#0000ff"
          />
          <input
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1"
            data-slot="input"
            placeholder="#000000"
            type="text"
            value="#0000ff"
          />
          <div
            class="flex items-center gap-1"
          >
            <input
              class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive w-16"
              data-slot="input"
              max="100"
              min="0"
              type="number"
              value="50"
            />
            <span
              class="text-sm text-muted-foreground"
            >
              %
            </span>
          </div>
          <button
            class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
            data-slot="button"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BackgroundFields > with a solid color background > matches the snapshot 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for=":id1:-form-item"
    >
      Color
    </label>
    <div
      aria-describedby=":id1:-form-item-description"
      aria-invalid="false"
      class="relative w-full"
      id=":id1:-form-item"
    >
      <div
        class="h-26 w-full rounded-md border cursor-pointer"
        style="background-color: rgb(18, 52, 86);"
      />
      <div
        class="absolute border inset-0 bg-white/60 backdrop-blur-[1px] opacity-100 lg:opacity-0 hover:opacity-100 transition-opacity rounded-md flex items-center justify-center cursor-pointer"
      >
        <button
          class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-slot="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-settings2 lucide-settings-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 17H5"
            />
            <path
              d="M19 7h-9"
            />
            <circle
              cx="17"
              cy="17"
              r="3"
            />
            <circle
              cx="7"
              cy="7"
              r="3"
            />
          </svg>
          Modify
        </button>
      </div>
      <input
        class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive sr-only"
        data-slot="input"
        type="color"
        value="#123456"
      />
    </div>
  </div>
</div>
`;

exports[`Design > matches the snapshot 1`] = `
<div>
  <div>
    <div
      class="sticky top-0 z-10 bg-background flex items-center justify-between p-2 sm:p-4 border-b"
    >
      <div
        class="flex flex-col gap-2 w-full"
      >
        <div
          class="flex justify-between items-center grow"
        >
          <div
            class="flex flex-col"
          >
            <h2
              class="text-lg sm:text-xl font-semibold"
            >
              Form Design
            </h2>
            <p
              class="text-sm sm:text-base text-muted-foreground"
            >
              Customize the content and appearance of your sweepstakes form
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-2 p-2 sm:p-4"
    >
      <div
        class="rounded-lg border p-3 shadow-xs"
      >
        <div
          class="space-y-1 flex flex-row items-start justify-between"
        >
          <div
            class="space-y-0.5 m-0"
          >
            <div
              class="flex gap-1 items-center"
            >
              <label
                class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                for=":id1:-form-item"
              >
                Display Name
              </label>
              <svg
                aria-controls="radix-:id2:"
                aria-expanded="false"
                aria-haspopup="dialog"
                class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
                data-slot="dialog-trigger"
                data-state="closed"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                type="button"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </div>
            <p
              class="text-sm text-muted-foreground"
              id=":id1:-form-item-description"
            >
              Whether to display the sweepstakes title.
            </p>
          </div>
          <button
            aria-checked="true"
            aria-describedby=":id1:-form-item-description"
            aria-invalid="false"
            class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.3rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="switch"
            data-state="checked"
            id=":id1:-form-item"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-4 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
              data-slot="switch-thumb"
              data-state="checked"
            />
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border p-3 shadow-xs"
      >
        <div
          class="space-y-1 flex flex-row items-start justify-between"
        >
          <div
            class="space-y-0.5 m-0"
          >
            <div
              class="flex gap-1 items-center"
            >
              <label
                class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                for=":id3:-form-item"
              >
                Display Description
              </label>
              <svg
                aria-controls="radix-:id4:"
                aria-expanded="false"
                aria-haspopup="dialog"
                class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
                data-slot="dialog-trigger"
                data-state="closed"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                type="button"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </div>
            <p
              class="text-sm text-muted-foreground"
              id=":id3:-form-item-description"
            >
              Whether to display the sweepstakes description.
            </p>
          </div>
          <button
            aria-checked="true"
            aria-describedby=":id3:-form-item-description"
            aria-invalid="false"
            class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.3rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="switch"
            data-state="checked"
            id=":id3:-form-item"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-4 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
              data-slot="switch-thumb"
              data-state="checked"
            />
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border p-3 shadow-xs"
      >
        <div
          class="space-y-1 flex flex-row items-start justify-between"
        >
          <div
            class="space-y-0.5 m-0"
          >
            <div
              class="flex gap-1 items-center"
            >
              <label
                class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                for=":id5:-form-item"
              >
                Video Aspect Ratio
              </label>
              <svg
                aria-controls="radix-:id6:"
                aria-expanded="false"
                aria-haspopup="dialog"
                class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
                data-slot="dialog-trigger"
                data-state="closed"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                type="button"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </div>
            <p
              class="text-sm text-muted-foreground"
              id=":id5:-form-item-description"
            >
              Apply a 16:9 video aspect ratio to your sweepstakes images.
            </p>
          </div>
          <button
            aria-checked="true"
            aria-describedby=":id5:-form-item-description"
            aria-invalid="false"
            class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.3rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
            data-slot="switch"
            data-state="checked"
            id=":id5:-form-item"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-4 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
              data-slot="switch-thumb"
              data-state="checked"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="sticky top-0 z-10 bg-background flex items-center justify-between p-2 sm:p-4 border-b border-t"
    >
      <div
        class="flex flex-col gap-2 w-full"
      >
        <div
          class="flex justify-between items-center grow"
        >
          <div
            class="flex flex-col"
          >
            <h2
              class="text-lg sm:text-xl font-semibold"
            >
              Layout
            </h2>
            <p
              class="text-sm sm:text-base text-muted-foreground"
            >
              Choose the layout and background style for your giveaway
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col gap-2 p-2 sm:p-4"
    >
      <div
        class="space-y-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for=":id7:-form-item"
        >
          Background
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-:id8:"
          aria-expanded="false"
          class="flex h-9 shadow-xs w-full items-center justify-between rounded-md border border-input bg-white dark:bg-input/30 px-3 py-2 text-sm ring-offset-background data-placeholder:text-muted-foreground focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            Solid Color
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="space-y-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for=":id9:-form-item"
        >
          Color
        </label>
        <div
          aria-describedby=":id9:-form-item-description"
          aria-invalid="false"
          class="relative w-full"
          id=":id9:-form-item"
        >
          <div
            class="h-26 w-full rounded-md border cursor-pointer"
            style="background-color: rgb(18, 52, 86);"
          />
          <div
            class="absolute border inset-0 bg-white/60 backdrop-blur-[1px] opacity-100 lg:opacity-0 hover:opacity-100 transition-opacity rounded-md flex items-center justify-center cursor-pointer"
          >
            <button
              class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-slot="button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings2 lucide-settings-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 17H5"
                />
                <path
                  d="M19 7h-9"
                />
                <circle
                  cx="17"
                  cy="17"
                  r="3"
                />
                <circle
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
              Modify
            </button>
          </div>
          <input
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive sr-only"
            data-slot="input"
            type="color"
            value="#123456"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
